@@ -98,7 +98,7 @@
     <Component class="javax.swing.JComboBox" name="comboBoxTerrainType">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new DefaultComboBoxModel(Terrain.getConfiguredValues())" type="code"/>
+          <Connection code="new DefaultComboBoxModel(allowCustomTerrain ? Terrain.getConfiguredValues() : Terrain.PICK_LIST)" type="code"/>
         </Property>
         <Property name="selectedItem" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="Terrain.DIRT" type="code"/>
